--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "dev": "concurrently \"npm run dev:css\" \"npm run dev:search\" \"remix watch\"",
     "dev:css": "tailwindcss -i ./styles/tailwind.css -o ./app/tailwind.css --watch",
     "postinstall": "remix setup cloudflare-workers",
-    "start": "concurrently \"npm run dev\" \"npm run start:worker\"",
+    "start": "npm run secret && concurrently \"npm run dev\" \"npm run start:worker\"",
     "deploy": "npm run build && wrangler publish",
     "deploy:production": "npm run build && wrangler publish --env production",
     "test": "jest",
@@ -26,7 +26,8 @@
     "build:types": "tsc",
     "build:types:watch": "tsc --watch",
     "lint": "npm run build:types",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "secret": "echo \"SESSION_SECRET=$(openssl rand -hex 32)\" > .env"
   },
   "dependencies": {
     "@apihero/fetch": "^0.1.0",
